--- a/a3_decision_tree.ipynb
+++ b/a3_decision_tree.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COSC102 Assignment 3 - Prepare Data\n",
+    "### COSC102 Assignment 3 - Decision Tree\n",
     "The purpose of this notebook is to prepare the data for the model training.\n",
     "We will use the data from the IMU sensor to train a model to predict the activity of the user.\n",
     "\n"
