adding some reasoning

--- a/a3_KNN.ipynb
+++ b/a3_KNN.ipynb
@@ -598,7 +598,7 @@
     "best_k = 0\n",
     "best_mean_f1 = 0\n",
     "f1_set = np.zeros(20)\n",
-    "best_k_range = range(3,20)\n",
+    "best_k_range = range(3,20) # remove k = 1 and 2 as they are outliers and cause overfitting\n",
     "\n",
     "for k in best_k_range:\n",
     "   #uses p = 1 for distance\n",
