Plot ROC curve for KNN

--- a/a3_decision_tree.ipynb
+++ b/a3_decision_tree.ipynb
@@ -638,7 +638,7 @@
     "ax.set_ylim([0.0, 1.05])\n",
     "ax.set_xlabel('False Positive Rate')\n",
     "ax.set_ylabel('True Positive Rate')\n",
-    "ax.set_title('Receiver Operating Characteristic Curve')\n",
+    "ax.set_title('Receiver Operating Characteristic Curve for Decision Tree')\n",
     "ax.legend(loc=\"lower right\")"
    ]
   },
