--- a/a3_submission.ipynb
+++ b/a3_submission.ipynb
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fab5768fd90>]"
+       "[<matplotlib.lines.Line2D at 0x7fcd3ac1f050>]"
       ]
      },
      "execution_count": 4,
@@ -152,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fab575cdb10>]"
+       "[<matplotlib.lines.Line2D at 0x7fcd3ab51b90>]"
       ]
      },
      "execution_count": 5,
@@ -426,8 +426,21 @@
     "                    'max_ax', 'max_ay', 'max_az', 'max_gx', 'max_gy', 'max_gz', \\\n",
     "                    'min_ax', 'min_ay', 'min_az', 'min_gx', 'min_gy', 'min_gz', \\\n",
     "                    'a_sma', 'g_sma', 'a_av_intensity', 'g_av_intensity']\n",
-    "                    \n",
+    "      \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_names = {0:\"Standing\", 1:\"Walking\", 2:\"Jogging\", 3:\"Side-Step\", 4:\"Running\"}\n",
+    "f_names = [\"Mean Ax\", \"Mean Ay\", \"Mean Az\",\"Mean Gx\", \"Mean Gy\", \"Mean Gz\",\n",
+    "           \"Max Ax\", \"Max Ay\", \"Max Az\",\"Max Gx\", \"Max Gy\", \"Max Gz\", \n",
+    "           \"Min Ax\", \"Min Ay\", \"Min Az\",\"Min Gx\", \"Min Gy\", \"Min Gz\",\n",
+    "           \"Acceleration SMA\", \"Gyroscope SMA\" , \"Acceleration AI\", \"Gyroscope AI\"]\n"
    ]
   },
   {
@@ -8976,11 +8989,6 @@
    ],
    "source": [
     "# visualise the best classifier using dtreeviz\n",
-    "c_names = {0:\"Standing\", 1:\"Walking\", 2:\"Jogging\", 3:\"Side-Step\", 4:\"Running\"}\n",
-    "f_names = [\"Mean Ax\", \"Mean Ay\", \"Mean Az\",\"Mean Gx\", \"Mean Gy\", \"Mean Gz\",\n",
-    "           \"Max Ax\", \"Max Ay\", \"Max Az\",\"Max Gx\", \"Max Gy\", \"Max Gz\", \n",
-    "           \"Min Ax\", \"Min Ay\", \"Min Az\",\"Min Gx\", \"Min Gy\", \"Min Gz\",\n",
-    "           \"Acceleration SMA\", \"Gyroscope SMA\" , \"Acceleration AI\", \"Gyroscope AI\"]\n",
     "\n",
     "viz = dtreeviz.model(best_clf,\n",
     "      np.array(X_train),\n",
@@ -9001,7 +9009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9017,7 +9025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -9146,7 +9154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -9163,7 +9171,7 @@
        "Text(0.5, 1.0, 'Testing Set')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -9221,7 +9229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -9230,7 +9238,7 @@
        "Text(0.5, 1.0, 'Receiver operating characteristic for KNN')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -9278,7 +9286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -9337,7 +9345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -9402,7 +9410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9414,7 +9422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -9438,7 +9446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9474,7 +9482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -9503,7 +9511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -9512,7 +9520,7 @@
        "Text(0.5, 1.0, 'Best classified F1 Scores')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -9550,7 +9558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -9567,7 +9575,7 @@
        "Text(0.5, 1.0, 'Test Data Confusion Matrix')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -9609,7 +9617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9629,16 +9637,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fab4eaf13d0>"
+       "<matplotlib.legend.Legend at 0x7fcd3a75f790>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -9673,7 +9681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -9722,7 +9730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -9920,7 +9928,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9946,7 +9954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -9955,7 +9963,7 @@
        "Text(0.5, 1.05, 'Pairplot of the 5 most important features for SGD Classifier')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -9985,7 +9993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
