change KNN label to SGD

--- a/a3_submission.ipynb
+++ b/a3_submission.ipynb
@@ -10303,7 +10303,7 @@
     "              edgecolor='r', s=40)\n",
     "  ax.set_xlim(xx.min(), xx.max())\n",
     "  ax.set_ylim(yy.min(), yy.max())\n",
-    "  ax.set_title(\"KNN 5-Class classification\")\n",
+    "  ax.set_title(\"SGD 5-Class classification\")\n",
     "  ax.set_xlabel(feature_names[f1])\n",
     "  ax.set_ylabel(feature_names[f2])\n",
     "  ax.legend()\n",
