--- a/a3_submission.ipynb
+++ b/a3_submission.ipynb
@@ -9113,6 +9113,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conclusion for the Decision Tree Classifier\n",
+    "\n",
+    "I trained a decision tree classifier and optimised the max depth for the tree. My strategy was to run a loop where I trained max depth for the decision tree classifiers and compared the F1 scores. Once I found the max depth with the best F1 score measured the confusion matrix and ROC AUC score. I then visualised the decision tree classifier using dtreeviz. The best max depth for the decision tree classifier was 5. As you can see it was quite good at identifying each class with the exception of the sidestep class. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### K Nearest Neighbours"
    ]
   },
@@ -9556,7 +9565,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SGD Classifier"
+    "### Conclusion for the KNN Classifier\n",
+    "\n",
+    "I have trained a K-nearest neighbours classifier. My strategy was to run an F1 score versus K optimization to determine the best amount of neighbours to classify the IMU data.  With this confusion matrices and ROC/ AUC plots were able to be calculated and plot the decision boundaries for the KNN classifier. The best K value was 5. It was quite effectice at classifying every class of activity with the lowest AUC score being 0.97 for Jogging and Standing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SGD Classifier"
    ]
   },
   {
@@ -9684,16 +9702,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall Score: [0.86111111 0.94701987 0.98742138 0.9        0.91208791]\n",
-      "Precision Score: [0.91176471 0.92857143 0.97515528 0.93103448 0.89247312]\n",
       "F1 Score: [0.88571429 0.93770492 0.98125    0.91525424 0.90217391]\n",
+      "Mean F1 Score: 0.9244194708157373\n",
       "Best alpha: 0.00012\n"
      ]
     }
@@ -9705,9 +9722,8 @@
     "conf_mat_test = confusion_matrix(y_test, y_test_predicted)\n",
     "\n",
     "# calculate recall, precision and F1 scores for each class\n",
-    "print(\"Recall Score:\", recall_score(y_train,y_predicted,average=None))\n",
-    "print(\"Precision Score:\", precision_score(y_train,y_predicted,average=None))\n",
     "print(\"F1 Score:\", f1_score(y_train,y_predicted,average=None))\n",
+    "print(\"Mean F1 Score:\", np.mean(f1_score(y_train,y_predicted,average=None)))\n",
     "print(\"Best alpha:\", best_alpha)"
    ]
   },
@@ -10309,6 +10325,15 @@
     "\n",
     "plotSGDPair(5, 9)\n",
     "plotSGDPair(4, 12)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion for the SGD Classifier\n",
+    "\n",
+    "The SGD classifier testing and training data was regenerated so that it could be normalised. An alpha range was also generated in order to train the best alpha hyperparameter. Training all features, the mean F1 score and best alpha is used to demonstrate the performance of the SGD classifier. The ROC AUC score was also calculated. The most important features were also found and a pairplot was generated to visualise the top 5 features. The decision boundaries were also plotted for the SGD classifier. The best alpha was 0.00012. The SGD classifier was quite effective at classifying every class of activity with the lowest AUC score being 0.97 for Jogging and Walking.\n"
    ]
   }
  ],
