Update to SGD conclusion

--- a/a3_submission.ipynb
+++ b/a3_submission.ipynb
@@ -10333,7 +10333,9 @@
    "source": [
     "### Conclusion for the SGD Classifier\n",
     "\n",
-    "The SGD classifier testing and training data was regenerated so that it could be normalised. An alpha range was also generated in order to train the best alpha hyperparameter. Training all features, the mean F1 score and best alpha is used to demonstrate the performance of the SGD classifier. The ROC AUC score was also calculated. The most important features were also found and a pairplot was generated to visualise the top 5 features. The decision boundaries were also plotted for the SGD classifier. The best alpha was 0.00012. The SGD classifier was quite effective at classifying every class of activity with the lowest AUC score being 0.97 for Jogging and Walking.\n"
+    "The SGD classifier testing and training data was regenerated so that it could be normalised. An alpha range was also generated in order to train the best alpha hyperparameter. Training all features, the mean F1 score and best alpha is used to demonstrate the performance of the SGD classifier. The ROC AUC score was also calculated. The most important features were also found and a pairplot was generated to visualise the top 5 features. The decision boundaries were also plotted for the SGD classifier. The best alpha was 0.00012. The SGD classifier was quite effective at classifying every class of activity with the lowest AUC score being 0.97 for Jogging and Walking.\n",
+    "\n",
+    "Originally I tried to optimise it to two features of the data, but I found that I got poor performance across all classes. I then decided to train it on all features and found that it performed much better. I scrapped that idea an ended up using all 22 data points to train the classifier and optimised the alpha value as my main hyperparameter. \n"
    ]
   }
  ],
