Oops wrong name

--- a/a3_submission.ipynb
+++ b/a3_submission.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# COSC102 Assignment 3 - Full Document\n",
-    "## Authors: Daniel Gooden, Calvin Duncan, and Adrian Cristallo\n",
+    "## Authors: Daniel Gooden, Calvin Dunn, and Adrian Cristallo\n",
     "The purpose of this notebook is to prepare the data for the model training.\n",
     "We will use the data from the IMU sensor to train a model to predict the activity of the user.\n",
     "We then take the data and build a feature set to train the models.\n",
